# Humanoid-MPC

./: CMakeLists.txt  main.cpp  mpc_utils.cpp  mpc_utils.hpp  q_optimal.csv  robot_model.cpp  walking_references.csv
walk/: a_ref.csv  com_ref.csv  contact_schedule.csv  ee_ori_ref.csv  ee_pos_ref.csv  q_ref.csv  v_ref.csv  walk.py  zmp_ref.csv
